<?xml version = "1.0" encoding = "utf-8"?>
<RelativeLayout xmlns:android = "http://schemas.android.com/apk/res/android"
    android:orientation = "vertical"
    android:layout_height="match_parent"
    android:layout_weight="match_parent" android:layout_width="1">

    <TextView android:id="@+id/latitude"
        android:text="@string/latitudelabel"
        android:layout_alignParentTop="true"
        android:layout_marginRight="4dip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView android:id="@+id/latitudeValue"
        android:layout_alignTop="@+id/latitude"
        android:layout_toRightOf="@+id/latitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView android:id="@+id/longitudeLabel"
        android:text="@string/longitudeLabel"
        android:layout_below="@id/latitude"
        android:layout_marginRight="4dip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView android:id="@+id/longitudeValue"
        android:layout_alignTop="@id/longitudeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView android:id="@+id/providerLabel"
        android:text="@string/providerLabel"
        android:layout_below="@id/longitudeLabel"
        android:layout_marginRight="4dip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView android:id = "@+id/providerValue"
        android:layout_alignTop="@id/providerLabel"
        android:layout_toRightOf="@id/providerLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView android:id="@+id/accuracyLabel"
        android:text="@string/accuracyLabel"
        android:layout_below="@+id/providerLabel"
        android:layout_marginRight="@+id/providerLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView android:id="@+id/accuracyValue"
        android:layout_alignTop="@+id/accuracyLabel"
        android:layout_toRightOf="@+id/accuracyLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView android:id="@+id/accuracyUnits"
        android:text="@string/metersUnit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView android:id="@+id/timeToFixLabel"
        android:text="@string/timeToFixLabel"
        android:layout_below="@+id/accuracyLabel"
        android:layout_marginRight="4dip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView android:id="@+id/timeToFixValue"
        android:layout_alignTop="@+id/timeToFixLabel"
        android:layout_toRightOf="@+id/timeToFixLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView android:id="@+id/timeToFixUnits"
        android:text="@string/secondsUnit"
        android:layout_alignTop="@+id/timeToFixLabel"
        android:layout_toRightOf="@+id/timeToFixValue"
        android:layout_marginLeft="4dip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView android:id="@+id/enabledProvidersLabel"
        android:text="@string/enabledProvidersLabel"
        android:layout_below="@+id/timeToFixLabel"
        android:layout_marginRight="4dip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView android:id="@+id/enabledProvidersValue"
        android:layout_alignTop="@+id/enabledProvidersLabel"
        android:layout_toRightOf="@+id/enabledProvidersLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button android:id="@+id/changeLocationProviderSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/changeLocationProvidersSettings"
        android:onClick="onChangeLocationProvidersSettingsClick"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>